changed obs-studio settings

--- a/home-manager/obs-studio/profiles/Untitled/basic.ini
+++ b/home-manager/obs-studio/profiles/Untitled/basic.ini
@@ -17,9 +17,9 @@ LowLatencyEnable=false
 
 [Stream1]
 IgnoreRecommended=false
-EnableMultitrackVideo=false
 MultitrackVideoMaximumAggregateBitrateAuto=true
 MultitrackVideoMaximumVideoTracksAuto=true
+EnableMultitrackVideo=false
 
 [SimpleOutput]
 FilePath=/home/j
@@ -45,13 +45,13 @@ ApplyServiceSettings=true
 UseRescale=false
 TrackIndex=1
 VodTrackIndex=2
-Encoder=obs_x264
+Encoder=obs_nvenc_av1_tex
 RecType=Standard
 RecFilePath=/home/j/Videos
 RecFormat2=mkv
 RecUseRescale=false
 RecTracks=63
-RecEncoder=av1_ffmpeg_vaapi_tex
+RecEncoder=obs_nvenc_av1_tex
 FLVTrack=1
 StreamMultiTrackAudioMixes=1
 FFOutputToFile=true
@@ -87,7 +87,7 @@ FFAEncoderId=0
 FFAEncoder=
 Track1Name=Stream
 VodTrackEnabled=false
-Track2Name=Output (Game/Desktop)
+Track2Name=Output (App)
 Track3Name=Input (Microphone)
 Track4Name=Output (Discord)
 Track5Name=Output (Music)
